--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -32,7 +32,7 @@ jobs:
           run: npm test 
           
         - name: Archive Test Result
-          continue-on-error: true
+          if: '!cancelled()'
           uses: actions/upload-artifact@v3
           with:
             name: Mocha-Test-Result
