--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   MONGO_URI: ${{ vars.MONGO_URI }}
-  MONGO_USERNAME: sueper
+  MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
 
 jobs:
@@ -32,8 +32,35 @@ jobs:
           run: npm test 
           
         - name: Archive Test Result
-          if: '!cancelled()'
           uses: actions/upload-artifact@v3
           with:
             name: Mocha-Test-Result
             path: test-results.xml
+       
+    code-coverage:
+      name: Code Coverage
+      runs-on: ubuntu-latest
+      steps:
+
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+        
+        - name: Setup NodeJS Version
+          uses: actions/setup-node@v3
+          with:
+            node-version: 18  
+        
+        - name: Install Dependencies
+          run: npm install    
+        
+        - name: Run Code Coverage
+          continue-on-error: true
+          run: npm run code-coverage  
+
+        - name: Code Coverage results
+          uses: actions/upload-artifact@v3  
+          with:
+            name: Code-Coverage-Results
+            path: coverage
+            retention-days: 5
+            
