--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -25,6 +25,12 @@ jobs:
           with:
             node-version: 20
     
+        - name: Cache NPM dependencies
+          uses: actions/cache@v3
+          with:
+            path: ~/.npm
+            key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json'))}}  
+
         - name: Install Dependencies
           run: npm install
     
@@ -36,7 +42,7 @@ jobs:
           with:
             name: Mocha-Test-Result
             path: test-results.xml
-       
+
     code-coverage:
       name: Code Coverage
       runs-on: ubuntu-latest
