--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -69,4 +69,25 @@ jobs:
             name: Code-Coverage-Results
             path: coverage
             retention-days: 5
+
+    docker:
+      runs-on: ubuntu-latest
+      needs: [unit-testing, code-coverage]
+      steps:
+        - name: Checkout repo
+          uses: actions/checkout@v4
+          
+        - name: Docker Login
+          uses: docker/login-action@v3
+          with:  
+            registry: ghcr.io
+            username: ${{ github.repository_owner }}
+            password: ${{ secrets.GITHUB_TOKEN }}  
             
+        - name: Docker Build and Push
+          uses: docker/build-push-action@v5
+          with:
+            push: true
+            tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }} 
+
+
