--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -96,4 +96,21 @@ jobs:
             push: true
             tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }} 
 
-
+    dev-deply:
+      needs: [docker]
+      runs-on: ubuntu-latest
+      environment: 
+        name: development
+      steps:
+        - uses: actions/checkout@v4
+        - name: Setup Kubectl
+          uses: azure/setup-kubectl@v3
+          with:
+            version: 'v1.26.0'
+        
+        - uses: azure/k8s-set-context@v3
+          with:
+            method: kubeconfig
+            kubeconfig: ${{ secrets.KUBECONFIG }}
+        - run: kubectl version --short -o yaml
+        
