--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -96,21 +96,18 @@ jobs:
             push: true
             tags: ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }} 
 
-    dev-deply:
-      needs: [docker]
+    dev-deploy:
+      needs: docker
       runs-on: ubuntu-latest
-      environment: 
+      environment:
         name: development
       steps:
         - uses: actions/checkout@v4
-        - name: Setup Kubectl
-          uses: azure/setup-kubectl@v3
+        - uses: azure/setup-kubectl@v3
           with:
-            version: 'v1.26.0'
-        
+            version: v1.26.0
         - uses: azure/k8s-set-context@v3
           with:
             method: kubeconfig
-            kubeconfig: ${{ secrets.KUBECONFIG }}
+            kubeconfig: '${{ secrets.KUBECONFIG }}'
         - run: kubectl version --short -o yaml
-        
