--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -110,4 +110,4 @@ jobs:
           with:
             method: kubeconfig
             kubeconfig: '${{ secrets.KUBECONFIG }}'
-        - run: kubectl version --short -o yaml
+        - run: kubectl version
