--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -111,3 +111,9 @@ jobs:
             method: kubeconfig
             kubeconfig: '${{ secrets.KUBECONFIG }}'
         - run: kubectl version
+
+    integration-test:
+      needs: dev-deploy
+      uses: ./.github/workflows/reusable-workflow.yml
+      with:
+        ingress-url: ${{ needs.dev-deploy.outputs.APP_INGRESS_URL }}
